Fixed position of editors when tip visible.
Ref #795 - possibly closes?

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1014,7 +1014,7 @@ body.streaming #bin {
 }
 
 .showtip #bin {
-  bottom: 26px;
+  /*bottom: 26px;*/
 }
 
 #tip {
